--- a/lib/moba_web/templates/layout/_guest_navigation.html.heex
+++ b/lib/moba_web/templates/layout/_guest_navigation.html.heex
@@ -1,12 +1,11 @@
 <header id="topnav">
-    <div class="topbar-menu py-2">
-        <div class="container-fluid text-right">
-            <div id="inner-navigation">
-                <%= link to: "/session/new", class: "h4 text-white mr-2" do %>
-                    <i class="fa fa-sign-in mr-1"></i>
-                    Already registered? Sign in
-                <% end %>
-            </div>
-        </div>
+  <div class="topbar-menu py-2">
+    <div class="container-fluid text-right">
+      <div id="inner-navigation">
+        <%= link to: "/session/new", class: "h4 text-white mr-2" do %>
+          <i class="fa fa-sign-in mr-1"></i> Already registered? Sign in
+        <% end %>
+      </div>
     </div>
+  </div>
 </header>
