--- a/lib/moba_web/templates/tavern/index.html.leex
+++ b/lib/moba_web/templates/tavern/index.html.leex
@@ -41,7 +41,7 @@
     <% end %>
 
     <div class="row <%= unless @active_tab == "avatars", do: "d-none" %> mt-2">
-        <%= if @featured_avatar, do: render "_featured_avatar.html", avatar: @featured_avatar, avatars: @all_avatars, player: @current_player %>
+        <%= if @featured_avatar, do: render("_featured_avatar.html", avatar: @featured_avatar, avatars: @all_avatars, player: @current_player) %>
         <%= for avatar <- @avatars do %>
             <%= render "_avatar.html", avatar: avatar, avatars: @all_avatars, player: @current_player %>
         <% end %>
