--- a/lib/moba_web/templates/arena/_duel_row.html.heex
+++ b/lib/moba_web/templates/arena/_duel_row.html.heex
@@ -1,27 +1,29 @@
 <tr>
-    <td class="d-flex justify-content-center">
-        <img src={"/images/pve/#{@opponent.pve_tier}.png"} class="mr-2" style="max-height:  40px"/>
-        <div style="width: 70%">
-            <h4 class="mt-2">
-                <%= live_redirect username(@opponent), to: Routes.player_path(@socket, :show, @opponent.id), class: "text-white" %>
-            </h4>
-        </div>
-    </td>
+  <td class="d-flex justify-content-center">
+    <img src={"/images/pve/#{@opponent.pve_tier}.png"} class="mr-2" style="max-height:  40px" />
+    <div style="width: 70%">
+      <h4 class="mt-2">
+        <.link navigate={Routes.player_path(@socket, :show, @opponent.id)} class="text-white">
+          <%= username(@opponent) %>
+        </.link>
+      </h4>
+    </div>
+  </td>
 
-    <td width="33%" class="text-center">
-        <%= duel_result(@duel, @player_id) %>
-        <%= if finished?(@duel) && @duel.rewards.attacker_pvp_points != 0 do %>
-            <%= if @duel.player_id == @player_id do %>
-                <%= rewards_badge(@duel.rewards.attacker_pvp_points) %>
-            <% else %>
-                <%= rewards_badge(@duel.rewards.defender_pvp_points) %>
-            <% end %>
-        <% end %>
-    </td>
-    
-    <td class="text-center">
-        <%= live_redirect to: Routes.live_path(@socket, MobaWeb.DuelLive, @duel), class: "btn btn-light" do %>
-            <i class="fa fa-eye"></i>
-        <% end %>
-    </td>
+  <td width="33%" class="text-center">
+    <%= duel_result(@duel, @player_id) %>
+    <%= if finished?(@duel) && @duel.rewards.attacker_pvp_points != 0 do %>
+      <%= if @duel.player_id == @player_id do %>
+        <%= rewards_badge(@duel.rewards.attacker_pvp_points) %>
+      <% else %>
+        <%= rewards_badge(@duel.rewards.defender_pvp_points) %>
+      <% end %>
+    <% end %>
+  </td>
+
+  <td class="text-center">
+    <.link navigate={Routes.live_path(@socket, MobaWeb.DuelLive, @duel)} class="btn btn-light">
+      <i class="fa fa-eye"></i>
+    </.link>
+  </td>
 </tr>
