--- a/lib/moba_web/templates/arena/_matchmaking.html.heex
+++ b/lib/moba_web/templates/arena/_matchmaking.html.heex
@@ -1,41 +1,42 @@
 <div class="card matchmaking" id="matchmaking-container" phx-hook="EqualHeight" phx-target=".arena .ranking">
-    <div class="card-body p-0">
-        <div class="d-flex justify-content-around my-2">
-            <%= live_redirect to: Routes.edit_arena_path(@socket, :edit), class: "btn btn-sm btn-primary text-primary" do %>
-                <i class="fa fa-group"></i> Edit Teams
-            <% end %> 
-        </div>
-        <div class="history">
-            <table class="table-dark table mb-0">
-                <%= for match <- @matches do %>
-                    <tr>
-                        <td>
-                            <h3 class="f-rpg m-0"><%= match_type(match) %></h3>
-                        </td>
-                        <td class="d-flex justify-content-center">
-                            <img src={"/images/pve/#{match.opponent.pve_tier}.png"} class="mr-2" style="max-height:  40px"/>
-                            <div style="width: 70%">
-                                <h4 class="mt-2">
-                                    <%= live_redirect username(match.opponent), to: Routes.player_path(@socket, :show, match.opponent.id), class: "text-white" %>       
-                                </h4>
-                            </div>
-                        </td>
-
-                        <td width="15%" class="text-center">
-                            <%= match_result(match) %>
-                            <%= if match.rewards.attacker_pvp_points != 0 do %>
-                                <%= rewards_badge(match.rewards.attacker_pvp_points) %>
-                            <% end %>
-                        </td>
-                        <td>
-                            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.MatchLive, match), class: "btn btn-light" do %>
-                                <i class="fa fa-eye"></i>
-                            <% end %>
-                        </td>
-                    </tr>
-
-                <% end %>
-            </table>
-        </div>
+  <div class="card-body p-0">
+    <div class="d-flex justify-content-around my-2">
+      <.link navigate={Routes.edit_arena_path(@socket, :edit)} class="btn btn-sm btn-primary text-primary">
+        <i class="fa fa-group"></i> Edit Teams
+      </.link>
     </div>
+    <div class="history">
+      <table class="table-dark table mb-0">
+        <%= for match <- @matches do %>
+          <tr>
+            <td>
+              <h3 class="f-rpg m-0"><%= match_type(match) %></h3>
+            </td>
+            <td class="d-flex justify-content-center">
+              <img src={"/images/pve/#{match.opponent.pve_tier}.png"} class="mr-2" style="max-height:  40px" />
+              <div style="width: 70%">
+                <h4 class="mt-2">
+                  <.link navigate={Routes.player_path(@socket, :show, match.opponent.id)} class="text-white">
+                    <%= username(match.opponent) %>
+                  </.link>
+                </h4>
+              </div>
+            </td>
+
+            <td width="15%" class="text-center">
+              <%= match_result(match) %>
+              <%= if match.rewards.attacker_pvp_points != 0 do %>
+                <%= rewards_badge(match.rewards.attacker_pvp_points) %>
+              <% end %>
+            </td>
+            <td>
+              <.link navigate={Routes.live_path(@socket, MobaWeb.MatchLive, match)} class="btn btn-light">
+                <i class="fa fa-eye"></i>
+              </.link>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
 </div>
