--- a/lib/moba_web/templates/arena/index.html.heex
+++ b/lib/moba_web/templates/arena/index.html.heex
@@ -1,29 +1,27 @@
 <div class="arena mt-2">
-    <div class="row">
+  <div class="row">
+    <div class="col">
+      <div class="row mb-3">
         <div class="col">
-            <div class="row mb-3">
-                <div class="col">
-                    <%= render "_pvp_progression.html", assigns %>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <%= render "_matchmaking.html", assigns %>
-                </div>
-                <div class="col">
-                    <%= render "_ranking.html", assigns %>
-                </div>
-
-                <%= unless silenced?(assigns) do %>
-                    <div class="col">
-                        <%= render "_duels.html", assigns %>
-                    </div>
-                <% end %>
-            </div>
-            
+          <%= render("_pvp_progression.html", assigns) %>
         </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <%= render("_matchmaking.html", assigns) %>
+        </div>
+        <div class="col">
+          <%= render("_ranking.html", assigns) %>
+        </div>
+
+        <%= unless silenced?(assigns) do %>
+          <div class="col">
+            <%= render("_duels.html", assigns) %>
+          </div>
+        <% end %>
+      </div>
     </div>
+  </div>
 </div>
 
-
-<%= live_component(MobaWeb.TutorialComponent, step: @tutorial_step) %>
+<.live_component module={MobaWeb.TutorialComponent} step={@tutorial_step} id="tutorial-step" />
