--- a/lib/moba_web/templates/layout/current_player.html.heex
+++ b/lib/moba_web/templates/layout/current_player.html.heex
@@ -1,3 +1,7 @@
 <%= if @challenge do %>
-    <div phx-hook={if @challenge.challenger, do: "DuelChallenger", else: "DuelChallenged"} id="duel-challenge" data-other={@challenge.other.user.username}/>
+  <div
+    phx-hook={if @challenge.challenger, do: "DuelChallenger", else: "DuelChallenged"}
+    id="duel-challenge"
+    data-other={@challenge.other.user.username}
+  />
 <% end %>
