--- a/lib/moba_web/templates/match/show.html.heex
+++ b/lib/moba_web/templates/match/show.html.heex
@@ -1,110 +1,154 @@
 <div class="matches">
-	<div class="row mt-2">
-		<div class="col-4">
-			<div class="card mb-0" id="player-card">
-				<h2 class="text-center f-rpg"><%= live_redirect username(@match.player), to: Routes.player_path(@socket, :show, @match.player), class: "text-white" %></h2>
-			</div>
-			<div class="row mt-2">
-				<%= for hero <- @picked_heroes do %>
-					<%= render "_picked_hero.html", hero: hero, player_id: @match.player_id, editable: is_nil(@match.winner) %>
-				<% end %>
-			</div>
-		</div>
-		<div class="col-4">
-			<div class="row">
-				<div class="col">
-					<div class="card mb-0" phx-hook="EqualHeight" phx-target="#player-card" id="winner-card">
-						<%= if @match.phase do %>
-							<h2 class="text-center">
-								Winner:
-								<%= if @match.winner && @tick >= length(@battles) do %> 
-									<%= username(@match.winner) %>
-								<% else %>
-									?
-								<% end %>
-							</h2>
-						<% else %>
-							<%= if length(@picked_heroes) >= 5 && @current_player.id == @match.player_id do %>
-								<button type="button" class="btn text-center btn-lg btn-block btn-primary dark-button margin-auto shadow-fx" phx-click="start" phx-hook="Loading" id="start-match-button">
-									<span class="loading-text">
-										<i class="fa fa-play mr-1"></i>
-										Lock Picks and Start Match
-									</span>
-								</button>
-							<% else %>
-								<h2 class="text-center text-white">
-									Pick 5 Heroes 
-									<%= if @latest_match do %>
-										<i class="fa-solid fa-repeat text-right ml-4 action-cursor" data-toggle="tooltip" title="Repeat picks from latest match" phx-click="repeat"></i>
-									<% end %>
-								</h2>
-							<% end %>
-						<% end %>
-					</div>
-				</div>
-			</div>
-			<%= if is_nil(@match.phase) && @current_player.id == @match.player_id do %>
-				<div class="row mt-1">
-					<div class="col">
-						<div class="card mb-0 mt-2" phx-hook="EqualHeight" phx-target="#opponent-heroes-container" id="picks-card">
-							<ul class="nav nav-pills navtab-bg mt-2 justify-content-center">
-								<li class="nav-item">
-            			<a href="javascript:;" phx-click="hero-tab" phx-value-type="teams" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "teams", do: "active"}"} phx-hook="Loading" id="teams-heroes-button">
-                      	<span class="d-inline-block loading-text"><i class="fa fa-group mr-1"></i>Teams</span>
-                  	</a>
-              	</li>
-              	<li class="nav-item">
-                  	<a href="javascript:;" phx-click="hero-tab" phx-value-type="trained" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "trained", do: "active"}"} phx-hook="Loading" id="trained-heroes-button">
-                      	<span class="d-inline-block loading-text"><i class="fa fa-sword mr-1"></i>Trained Heroes</span>
-                  	</a>
+  <div class="row mt-2">
+    <div class="col-4">
+      <div class="card mb-0" id="player-card">
+        <h2 class="text-center f-rpg">
+          <.link navigate={Routes.player_path(@socket, :show, @match.player)} class="text-white">
+            <%= username(@match.player) %>
+          </.link>
+        </h2>
+      </div>
+      <div class="row mt-2">
+        <%= for hero <- @picked_heroes do %>
+          <%= render("_picked_hero.html", hero: hero, player_id: @match.player_id, editable: is_nil(@match.winner)) %>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="col-4">
+      <div class="row">
+        <div class="col">
+          <div class="card mb-0" phx-hook="EqualHeight" phx-target="#player-card" id="winner-card">
+            <%= if @match.phase do %>
+              <h2 class="text-center">
+                Winner:
+                <%= if @match.winner && @tick >= length(@battles) do %>
+                  <%= username(@match.winner) %>
+                <% else %>
+                  ?
+                <% end %>
+              </h2>
+            <% else %>
+              <%= if length(@picked_heroes) >= 5 && @current_player.id == @match.player_id do %>
+                <button
+                  type="button"
+                  class="btn text-center btn-lg btn-block btn-primary dark-button margin-auto shadow-fx"
+                  phx-click="start"
+                  phx-hook="Loading"
+                  id="start-match-button"
+                >
+                  <span class="loading-text">
+                    <i class="fa fa-play mr-1"></i> Lock Picks and Start Match
+                  </span>
+                </button>
+              <% else %>
+                <h2 class="text-center text-white">
+                  Pick 5 Heroes
+                  <%= if @latest_match do %>
+                    <i
+                      class="fa-solid fa-repeat text-right ml-4 action-cursor"
+                      data-toggle="tooltip"
+                      title="Repeat picks from latest match"
+                      phx-click="repeat"
+                    >
+                    </i>
+                  <% end %>
+                </h2>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <%= if is_nil(@match.phase) && @current_player.id == @match.player_id do %>
+        <div class="row mt-1">
+          <div class="col">
+            <div class="card mb-0 mt-2" phx-hook="EqualHeight" phx-target="#opponent-heroes-container" id="picks-card">
+              <ul class="nav nav-pills navtab-bg mt-2 justify-content-center">
+                <li class="nav-item">
+                  <a
+                    href="javascript:;"
+                    phx-click="hero-tab"
+                    phx-value-type="teams"
+                    data-toggle="tab"
+                    class={"nav-link px-2 py-1 #{if @hero_tab == "teams", do: "active"}"}
+                    phx-hook="Loading"
+                    id="teams-heroes-button"
+                  >
+                    <span class="d-inline-block loading-text"><i class="fa fa-group mr-1"></i>Teams</span>
+                  </a>
                 </li>
                 <li class="nav-item">
-            			<a href="javascript:;" phx-click="hero-tab" phx-value-type="available" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "available", do: "active"}"} phx-hook="Loading" id="available-heroes-button">
-                      	<span class="d-inline-block loading-text"><i class="fa fa-dice mr-1"></i>Available Heroes</span>
-                  	</a>
-              	</li>
-	    				</ul>
-			        <div class="tab-content pt-0 mt-2">
-			        	<div class={"tab-pane fade #{if @hero_tab == "teams", do: "active show"}"} id="teams-heroes">
-									<hr class="mb-2"/>
-									<%= for team <- @teams do %>
-										<%= render "_team.html", team: team, picked_ids: Enum.map(@picked_heroes, &(&1.id))  %>
-									<% end %>
-								</div>
-			          <div class={"tab-pane fade #{if @hero_tab == "trained", do: "active show"}"} id="trained-heroes">
-									<hr class="mb-2"/>
-									<%= for hero <- @trained_heroes do %>
-										<%= render "_hero.html", hero: hero, picked_ids: Enum.map(@picked_heroes, &(&1.id))  %>
-									<% end %>
-								</div>
-								<div class={"tab-pane fade #{if @hero_tab == "available", do: "active show"}"} id="available-heroes">
-									<hr class="mb-2"/>
-									<%= for hero <- @generated_heroes do %>
-										<%= render "_hero.html", hero: hero, picked_ids: Enum.map(@picked_heroes, &(&1.id))  %>
-									<% end %>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			<% end %>
-			<div class="row mt-1">
-				<%= for battle <- Enum.take(@battles, @tick) do %>
-					<%= render "_battle_review.html", battle: battle, socket: @socket, match: @match %>
-				<% end %>
-			</div>
-		</div>
-		<div class="col-4">
-			<div class="card mb-0">
-				<h2 class="text-center f-rpg"><%= live_redirect username(@match.opponent), to: Routes.player_path(@socket, :show, @match.opponent), class: "text-white" %></h2>
-			</div>
-			<div class="row mt-2" id="opponent-heroes-container">
-				<%= for hero <- @match.opponent_picks do %>
-					<%= render "_picked_hero.html", hero: hero, player_id: @match.opponent_id, editable: false %>
-				<% end %>
-			</div>
-		</div>
-	</div>
+                  <a
+                    href="javascript:;"
+                    phx-click="hero-tab"
+                    phx-value-type="trained"
+                    data-toggle="tab"
+                    class={"nav-link px-2 py-1 #{if @hero_tab == "trained", do: "active"}"}
+                    phx-hook="Loading"
+                    id="trained-heroes-button"
+                  >
+                    <span class="d-inline-block loading-text"><i class="fa fa-sword mr-1"></i>Trained Heroes</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    href="javascript:;"
+                    phx-click="hero-tab"
+                    phx-value-type="available"
+                    data-toggle="tab"
+                    class={"nav-link px-2 py-1 #{if @hero_tab == "available", do: "active"}"}
+                    phx-hook="Loading"
+                    id="available-heroes-button"
+                  >
+                    <span class="d-inline-block loading-text"><i class="fa fa-dice mr-1"></i>Available Heroes</span>
+                  </a>
+                </li>
+              </ul>
+              <div class="tab-content pt-0 mt-2">
+                <div class={"tab-pane fade #{if @hero_tab == "teams", do: "active show"}"} id="teams-heroes">
+                  <hr class="mb-2" />
+                  <%= for team <- @teams do %>
+                    <%= render("_team.html", team: team, picked_ids: Enum.map(@picked_heroes, & &1.id)) %>
+                  <% end %>
+                </div>
+                <div class={"tab-pane fade #{if @hero_tab == "trained", do: "active show"}"} id="trained-heroes">
+                  <hr class="mb-2" />
+                  <%= for hero <- @trained_heroes do %>
+                    <%= render("_hero.html", hero: hero, picked_ids: Enum.map(@picked_heroes, & &1.id)) %>
+                  <% end %>
+                </div>
+                <div class={"tab-pane fade #{if @hero_tab == "available", do: "active show"}"} id="available-heroes">
+                  <hr class="mb-2" />
+                  <%= for hero <- @generated_heroes do %>
+                    <%= render("_hero.html", hero: hero, picked_ids: Enum.map(@picked_heroes, & &1.id)) %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      <div class="row mt-1">
+        <%= for battle <- Enum.take(@battles, @tick) do %>
+          <%= render("_battle_review.html", battle: battle, socket: @socket, match: @match) %>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card mb-0">
+        <h2 class="text-center f-rpg">
+          <.link navigate={Routes.player_path(@socket, :show, @match.opponent)} class="text-white">
+            <%= username(@match.opponent) %>
+          </.link>
+        </h2>
+      </div>
+      <div class="row mt-2" id="opponent-heroes-container">
+        <%= for hero <- @match.opponent_picks do %>
+          <%= render("_picked_hero.html", hero: hero, player_id: @match.opponent_id, editable: false) %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
 
-<%= live_component(MobaWeb.TutorialComponent, step: @tutorial_step) %>
+<.live_component module={MobaWeb.TutorialComponent} step={@tutorial_step} id="tutorial-step" />
