--- a/lib/moba_web/templates/player/_matches.html.heex
+++ b/lib/moba_web/templates/player/_matches.html.heex
@@ -1,26 +1,35 @@
 <div class="row">
-    <div class="col">
-        <div class="transparent p-0 matches">
-            <table class="table table-dark text-center table-sm m-0">
-                <%= for match <- @matches do %>
-                    <tr>
-                        <td class="text-center" width="33%">
-                            <span class="opponent"><%= live_redirect username(match.opponent), to: Routes.player_path(@socket, :show, match.opponent_id) %></span>
-                        </td>
+  <div class="col">
+    <div class="transparent p-0 matches">
+      <table class="table table-dark text-center table-sm m-0">
+        <%= for match <- @matches do %>
+          <tr>
+            <td class="text-center" width="33%">
+              <span class="opponent">
+                <.link navigate={Routes.player_path(@socket, :show, match.opponent_id)}>
+                  <%= username(match.opponent) %>
+                </.link>
+              </span>
+            </td>
 
-                        <td class="text-center" width="33%">
-                            <%= ArenaView.match_result(match) %>
-                            <%= rewards_badge(match.rewards.attacker_pvp_points) %>
-                        </td>
-                        
-                        <td  class="text-center" width="33%">
-                            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.MatchLive, match), class: "btn btn-light btn-sm", data: [toggle: "tooltip"], title: String.capitalize(match.type) do %>
-                                <i class="fa fa-eye"></i>
-                            <% end %>
-                        </td>
-                    </tr>
-                <% end %>
-            </table>
-        </div>
+            <td class="text-center" width="33%">
+              <%= ArenaView.match_result(match) %>
+              <%= rewards_badge(match.rewards.attacker_pvp_points) %>
+            </td>
+
+            <td class="text-center" width="33%">
+              <.link
+                navigate={Routes.live_path(@socket, MobaWeb.MatchLive, match)}
+                class="btn btn-light btn-sm"
+                data={[toggle: "tooltip"]}
+                title={String.capitalize(match.type)}
+              >
+                <i class="fa fa-eye"></i>
+              </.link>
+            </td>
+          </tr>
+        <% end %>
+      </table>
     </div>
+  </div>
 </div>
